--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div class="tela-inicial" style="display: none">
-   <img class="logo" scr ="logo.png" alt="" />
+  <div class="tela-inicial" style="display: none;">
+   <img class="logo" src="logo.png" alt="" />
   
     
     <br />
