--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   
   <div class="tela-errou" style="display:none">
     <img class="errou" src="lose.png" alt="" />
+  </div>
+  
+  <div class="tela-ganhou" "display:none">
+    <img class="ganhou" src="" alt="" />
     
   </div>
   
