--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <img class="errou" src="lose.png" alt="" />
   </div>
   
-  <div class="tela-ganhou" "display:none">
-    <img class="ganhou" src="" alt="" />
+  <div class="tela-ganhou" style="display:none">
+    <img class="ganhou" src="parabens.png" alt="" />
     
   </div>
   
